--- a/package.json
+++ b/package.json
@@ -1,14 +1,28 @@
 {
-  "name": "crud-server",
-  "version": "1.0.0",
-  "main": "server.js",
-  "type": "module",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1"
-  }
+    "name": "server",
+    "version": "1.0.0",
+    "description": "production ready server for Morana's Food List",
+    "main": "server.js",
+    "type": "module",
+    "scripts": {
+        "start": "node server.js",
+        "server:dev": "nodemon server.js",
+        "server:prod": "set NODE_ENV=production&node server.js",
+        "server:prod:mac": "export NODE_ENV=production && node server.js"
+    },
+    "author": "Me",
+    "license": "ISC",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "cryptr": "^6.0.3",
+        "dotenv": "^16.4.5",
+        "express": "^4.17.1",
+        "mongodb": "^6.8.0",
+        "socket.io": "^4.7.5"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.4"
+    }
 }
